# RCJ2025

./: LICENSE  README.md
hardware/: .gitignore  diodes_inc.kicad_sym  fp-lib-table  rcj25.kicad_pcb  rcj25.kicad_pro  rcj25.kicad_sch  sym-lib-table
hardware/adam_tech.pretty/: PCA-6G-24-HL-3.kicad_mod
hardware/misc.pretty/: KSM632B.kicad_mod  PinHeader_3x04_P2.54mm_Horizontal.kicad_mod  PinHeader_3x04_P2.54mm_Vertical.kicad_mod  SHOUHAN_MicroQTJ.kicad_mod
software/Arduino/src/: main.cpp
software/car/: .clangd  CMakeLists.txt  main.c  test.c
software/car/include/: ov7670.h  ov7670_init.h
software/car/main/: CMakeLists.txt  cam.c  imu.c  main.c
software/car/main/include/: anim.h  base.h  camera.h  imu.h  motor.h  pose.h
software/car/main/src/: anim.c  base.c  imu.c  motor.c  pose.c
software/car/src/: clock.pio  ov7670.c
software/dev/road_detect/: .gitignore  README.md  main.c
software/dev/road_detect_2_(shittier)/: .gitignore  main.c
software/raspberry/: app.py  lasergate+confetti.py
software/raspberry/templates/: dev.html  index.html
